feature: config clodinary

--- a/.env.sample
+++ b/.env.sample
@@ -11,3 +11,8 @@ TELEGRAM_BOT_TOKEN=
 
 // Mongo database
 MONGODB_URI=
+
+// Cloudinary
+CLOUDINARY_NAME=
+CLOUDINARY_API_KEY=
+CLOUDINARY_API_SECRET=
